# stantion-1580

./: install_build_deps.ps1  main.py  simple_scan.py
.github/workflows/: build.yml
output_module/: build_linux.sh
scanner_module/: CMakeLists.txt  ScannerHAL.hpp  build_pybind.bat
